--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ console.log(largest_num)
       let a=10;
       let b=40;
       if(a>b){
-          console.log("largest number")
+          console.log( a +""+ " is largest number")
       }
       else{
-          console.log("largest number")
+          console.log(b +""+"is largest number")
       }
  
 
